[tool.poetry]
name = "heating-control"
version = "0.1.0"
description = "IoT app to keeps the temperatures of rooms at a desired one, using MQTT-based temperature sensors, motion sensors and heating valves"
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
fastapi-mqtt = "^0.3.0"
requests = "^2.26.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
